# URDF_and_MoveIt

./: README.md
fanuc_m710ic_support/: package.xml  setup.cfg  setup.py
fanuc_m710ic_support/fanuc_m710ic_support/: publish_joint_states.py
fanuc_m710ic_support/launch/: view_robot.launch.py
fanuc_m710ic_support/urdf/: m710ic45m.urdf  m710ic45m.xacro  m710ic45m_macro.xacro
fanuc_m710ic_support_moveit_config/: CMakeLists.txt  package.xml
fanuc_m710ic_support_moveit_config/config/: fanuc_m710ic45m.ros2_control.xacro  fanuc_m710ic45m.srdf  fanuc_m710ic45m.urdf.xacro  initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml
fanuc_m710ic_support_moveit_config/launch/: demo.launch.py  launch_moveit.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
fanuc_resources/: package.xml  setup.cfg  setup.py
